# verseq

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 132fcc72002a_initial.py
app/: main.py
app/api/: auth.py  lessons.py  practice.py  sessions.py  stats.py
app/core/: config.py  database.py  security.py
app/data/: lessons.json
app/data/en/: bigrams.json  words_10k.txt
app/data/ru/: bigrams.json  words_10k.txt
app/models/: models.py
app/schemas/: lesson_schemas.py  schemas.py
app/services/: adaptive.py  dictionary.py  generator.py  lesson_service.py
frontend/: .eslintrc.cjs  .gitignore  Dockerfile  index.html  package-lock.json  package.json  quasar.config.js  tsconfig.vue-tsc.json
frontend/src/: App.vue  tokenManager.ts
frontend/src/api/: index.ts
frontend/src/boot/: axios.ts  pinia-persistedstate.ts
frontend/src/components/: HeatmapChart.vue  KeyboardViz.vue  ResultsCard.vue  TypingZone.vue
frontend/src/composables/: useKeyboard.ts  useSound.ts  useTypingEngine.ts
frontend/src/css/: app.scss
frontend/src/layouts/: MainLayout.vue
frontend/src/pages/: CoursePage.vue  LandingPage.vue  LessonPage.vue  LoginPage.vue  OnboardingPage.vue  PracticePage.vue  SettingsPage.vue  StatsPage.vue
frontend/src/router/: routes.ts
nginx/: nginx.conf
scripts/: init_db.py  rebuild_error_matrix.py
tests/: conftest.py  test_auth.py  test_generator.py  test_lessons.py  test_sessions.py  test_stats.py
(+4 files in other folders)
